--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>jQuery Accordion</title>
+    <title>jQuery Accordion Demo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='//fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
@@ -21,7 +21,9 @@
             font-family: Ubuntu;
         }
         h1 {
-            letter-spacing: 2px;
+            display: block;
+            letter-spacing: 1px;
+            text-align: center;
         }
         h1, .accordion {
             margin-left: auto;
@@ -37,14 +39,15 @@
             padding: 8px;
         }
         .accordion > div {
-            border: 1px solid #000000;
+            border-left: 1px dotted #000000;
+            border-right: 1px dotted #000000;
             background-color: #EEEEEE;
             margin: 0;
         }
     </style>
 </head>
 <body>
-<h1>Accordion</h1>
+<h1>Alice's Adventures in Wonderland</h1>
 <div id="accordion" class="accordion">
     <h3 id="Down-the-Rabbit-Hole">Down the Rabbit-Hole</h3>
     <div>
