--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='//fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/mpcx-accordion.css">
+    <link rel="stylesheet" href="../src/css/mpcx-accordion.css">
     <style>
         html {
             box-sizing: border-box;
@@ -600,6 +600,6 @@
     </div>
 </div>
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="js/mpcx-accordion.js"></script>
+<script src="../src/js/mpcx-accordion.js"></script>
 </body>
 </html>
