--- a/demo/index.html
+++ b/demo/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>jQuery Accordion Demo</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='//fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../src/css/mpcx-accordion.css">
+    <meta name="description" content="">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu">
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../src/css/mpcx-accordion.css">
+    <title>jQuery Accordion Demo</title>
     <style>
         html {
             box-sizing: border-box;
@@ -599,7 +599,7 @@
         back to finish his story.</p>
     </div>
 </div>
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="../src/js/mpcx-accordion.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../src/js/mpcx-accordion.js"></script>
 </body>
 </html>
