--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu">
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../src/css/mpcx-accordion.css">
+    <link rel="stylesheet" type="text/css" href="../src/css/accordion.css">
     <title>jQuery Accordion Demo</title>
     <style>
         html {
@@ -599,7 +599,7 @@
         back to finish his story.</p>
     </div>
 </div>
-<script type="text/javascript" src="//code.jquery.com/jquery-1.12.2.min.js"></script>
-<script type="text/javascript" src="../src/js/mpcx-accordion.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.12.3.min.js"></script>
+<script type="text/javascript" src="../src/js/accordion.js"></script>
 </body>
 </html>
