--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu">
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../src/css/accordion.css">
+    <link rel="stylesheet" type="text/css" href="../src/public/css/accordion.css">
     <title>jQuery Accordion Demo</title>
     <style>
         html {
@@ -600,6 +600,6 @@
     </div>
 </div>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.12.4.min.js"></script>
-<script type="text/javascript" src="../src/js/accordion.js"></script>
+<script type="text/javascript" src="../src/public/js/accordion.js"></script>
 </body>
 </html>
