change demo removed font-awesome and added wordpress dashicons

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu">
-    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../vendor/wordpress/wp-includes/css/dashicons.min.css">
     <link rel="stylesheet" type="text/css" href="../src/public/css/accordion.css">
     <title>jQuery Accordion Demo</title>
     <style>
@@ -49,7 +49,7 @@
 <body>
 <h1>Alice's Adventures in Wonderland</h1>
 <div id="accordion" class="accordion">
-    <h3 id="Down-the-Rabbit-Hole">Down the Rabbit-Hole</h3>
+    <h3 data-hash="Down-the-Rabbit-Hole">Down the Rabbit-Hole</h3>
     <div>
         <p>Alice was beginning to get very tired of sitting by her sister on the
         bank, and of having nothing to do: once or twice she had peeped into the
@@ -225,7 +225,7 @@
         <p>So she set to work, and very soon finished off the cake.</p>
         <p>*    *    *    *    *    *    *</p>
     </div>
-    <h3 id="The-Pool-of-Tears">The Pool of Tears</h3>
+    <h3 data-hash="The-Pool-of-Tears">The Pool of Tears</h3>
     <div>
         <p>'Curiouser and curiouser!' cried Alice (she was so much surprised, that
         for the moment she quite forgot how to speak good English); 'now I'm
@@ -403,7 +403,7 @@
         a Lory and an Eaglet, and several other curious creatures. Alice led the
         way, and the whole party swam to the shore.</p>
     </div>
-    <h3 id="A-Caucus-Race-and-a-Long-Tale">A Caucus-Race and a Long Tale</h3>
+    <h3 data-hash="A-Caucus-Race-and-a-Long-Tale">A Caucus-Race and a Long Tale</h3>
     <div>
         <p>They were indeed a queer-looking party that assembled on the bank--the
         birds with draggled feathers, the animals with their fur clinging close
